# CUDA_assignments

assignment1/: README.md  basic_cuda_matrix.cu  optimized_cuda_matrix.cu
assignment2/: README.md  image-convolution.cu
assignment3/: CMakeLists.txt
assignment3/src/: main.cpp
assignment3/src/input_args_parser/: input_args_parser.cpp  input_args_parser.h
assignment3/src/kernels/: convolution_kernels.cu  kernels.h
assignment3/src/utils/: filter_utils.cpp  filter_utils.h  input_handler.cpp  input_handler.h
assignment3/tests/unit_tests/: CMakeLists.txt  test_convolution.cpp  test_utils.cpp
assignment4/src/: main.cpp
assignment4/src/kernels/: convolution_kernels.cu
assignment4/src/utils/: filter_utils.cpp  filter_utils.h
